# notes_ap

./: README.md  SIMPLE.md  app.py  line_by_line_explanation.md  pyproject.toml
demo/: record_demo.py
static/: styles.css
templates/: 404.html  base.html  edit.html  index.html
tests/: test_app.py
