[project]
name = "simple-flask-crud"
version = "0.1.0"
description = "Very simple Flask + SQLite CRUD app"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.1.0,<4.0.0",
]

[dependency-groups]
dev = [
    "playwright>=1.54.0,<2.0.0",
    "pytest>=8.0.0,<9.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
